# hermes-runtime

./: .gitattributes  .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml
advisor_gate/: __init__.py  audit_handlers.py  config.py  event_hooks.py  final_gate.py  packets.py  policy.py  pre_tool_gate.py  prompts.py  receipt_queries.py  registration.py  resolution_handlers.py  schemas.py  store.py  tool_schemas.py
config/: advisor-gate.example.yaml  hermes.baseline.example.yaml
docs/: ADR-0001-plugin-first.md  ADR-0002-no-core-fork-yet.md  ADR-0003-generic-pre-final-response-hook.md  advisor-topology-fit.md  architecture.md  core-patch-decision.md  end-to-end-validation-runbook.md  exec-plan.md  hermes-baseline-topology.md  hermes-plugin-contract.md  image-spec-compliance.md  image-spec-remediation-plan.md  implementation-plan.md  integration-validation.md  research-notes.md
patches/: README.md
plugin/advisor-gate/: __init__.py  plugin.yaml
plugin/advisor-gate/advisor_gate/: __init__.py  audit_handlers.py  config.py  event_hooks.py  final_gate.py  packets.py  policy.py  pre_tool_gate.py  prompts.py  receipt_queries.py  registration.py  resolution_handlers.py  store.py  tool_schemas.py
runtime-profile/config/: advisor-gate.example.yaml  hermes.config.example.yaml
runtime-profile/runbooks/: install-pi.md  live-smoke.md
runtime-profile/skills/advisor-flow/: SKILL.md
skills/advisor-gate/: SKILL.md
tests/: test_end_to_end_flow.py  test_hooks.py  test_plugin_tool.py  test_policy.py  test_prompt_packets.py  test_receipts.py  test_schema.py
(+2 files in other folders)
